Cleaned heatmap prices and prices_per_parcels

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -141,7 +141,10 @@
    "outputs": [],
    "source": [
     "# Convert all XML into one JSON file\n",
-    "!scraping/owners/multiple_xml_to_single_json.sh all_owners_dirty.json 2>&1 | head -3"
+    "\n",
+    "# TODO PIETRO --> 2>&1 | head -3 non permette di eseguire la cella seguente.\n",
+    "\n",
+    "!scraping/owners/multiple_xml_to_single_json.sh all_owners_dirty.json"
    ]
   },
   {
@@ -514,7 +517,7 @@
    "source": [
     "from heatmap import heatmap_category\n",
     "m = heatmap_category(complete_owners_parcelles_pd._to_geo(), owners_categories )\n",
-    "m.save(\"export/owners_by_category.html\")\n",
+    "m.save(\"export/by_owners_pd.html\")\n",
     "#m"
    ]
   },
@@ -764,7 +767,7 @@
    "source": [
     "from heatmap import heatmap_all_rents\n",
     "m = heatmap_all_rents(rent_prices_pd, quartiers_pd._to_geo() )\n",
-    "m.save(\"export/all_rents.html\")\n",
+    "m.save(\"export/marker_by_quartiers_pd.html\")\n",
     "m"
    ]
   },
@@ -829,7 +832,7 @@
    "source": [
     "from heatmap import heatmap_all_rents_by_quartiers\n",
     "m = heatmap_all_rents_by_quartiers(rent_prices_pd, quartiers_pd._to_geo() )\n",
-    "m.save(\"export/all_rents_by_quartiers.html\")\n",
+    "m.save(\"export/rents_by_quartiers_pd.html\")\n",
     "m"
    ]
   },
@@ -1010,10 +1013,10 @@
    "outputs": [],
    "source": [
     "# Remove not assigned owner\n",
-    "rent_prices_pd = rent_prices_pd.dropna()\n",
+    "rent_prices_dropped_pd = rent_prices_pd.dropna().copy()\n",
     "\n",
-    "rent_prices_pd['owner_type'] = rent_prices_pd['owner'].apply(lambda r: categorize(r))\n",
-    "rent_prices_pd.head(2)"
+    "rent_prices_dropped_pd['owner_type'] = rent_prices_dropped_pd['owner'].apply(lambda r: categorize(r))\n",
+    "rent_prices_dropped_pd.head(2)"
    ]
   },
   {
@@ -1034,7 +1037,7 @@
     "from sklearn import linear_model\n",
     "import scipy\n",
     "\n",
-    "covariates = rent_prices_pd[['owner_type','CHF/m2']].copy()\n",
+    "covariates = rent_prices_dropped_pd[['owner_type','CHF/m2']].copy()\n",
     "covariates[\"owner_type\"] = covariates[\"owner_type\"].astype(\"category\")\n",
     "samples_per_cat = covariates[\"owner_type\"].value_counts()\n",
     "\n",
@@ -1178,7 +1181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Heatmap\n",
+    "## Export - prices\n",
     "Can a heatmap show spacial dependency of rent prices? Let's investigate"
    ]
   },
@@ -1188,61 +1191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import colors, cm\n",
-    "import branca.colormap as cmb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rent_prices_pd.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min_price, max_price = np.quantile(rent_prices_pd['CHF/m2'] , q=(0.05, 0.90))\n",
-    "\n",
-    "m = folium.Map([46.524, 6.63], tiles=\"cartodbpositron\", zoom_start=14)\n",
-    "\n",
-    "a = rent_prices_pd.apply(lambda r: add_marker(m, r['lat'], r['long'], r['CHF/m2'], min_price, max_price), axis='columns')\n",
-    "\n",
-    "m.save(\"export/heatmap_prices_pd.html\")\n",
-    "\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from heatmap import heatmap_prices_from_json\n",
-    "heatmap_prices_per_parcels(rent_prices_pd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hm = tools.heatmap_prices_per_parcels(geo_parcels, prices_for_all_parcels)\n",
-    "hm.save('export/heatmap_prices_all_parcelles.html')"
+    "from heatmap import heatmap_prices\n",
+    "m = heatmap_prices(rent_prices_pd)\n",
+    "m.save('export/prices_pd.html')"
    ]
   },
   {
@@ -1304,14 +1255,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rent_prices_pd.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Prepare the data to be trained\n",
-    "\n",
-    "pd_parcels_rent = pd.DataFrame.from_dict(rent_prices)\n",
-    "pd_parcels_rent.head(2)\n",
-    "\n",
-    "train = pd_parcels_rent['position'].apply(lambda r: pd.Series(r))\n",
-    "train = pd.concat([pd_parcels_rent['CHF/m2'], train], axis='columns')\n",
-    "train.columns = ['target', 'long', 'lat']\n",
+    "train = rent_prices_pd[['CHF/m2', 'long', 'lat']].copy()\n",
+    "train.rename({'CHF/m2':'target'},axis='columns',inplace=True)\n",
     "train.head()"
    ]
   },
@@ -1321,19 +1276,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare the data to be predicted\n",
-    "polygons_df = pd.DataFrame.from_records(get_parcel_polygons())\n",
-    "polygons_df.columns = ('parc_no', 'proprio', 'poly')\n",
-    "polygons_df['owner_type'] = polygons_df['proprio'].apply(categorize)\n",
-    "polygons_df['x'] = polygons_df['poly'].apply(lambda poly: poly.centroid.x)\n",
-    "polygons_df['y'] = polygons_df['poly'].apply(lambda poly: poly.centroid.y)\n",
-    "\n",
-    "# select 'id' and 'position' of parcels\n",
-    "features = polygons_df[[\"x\", \"y\", \"parc_no\"]]\n",
-    "features.columns = [\"long\", \"lat\", \"parc_no\"]\n",
-    "\n",
-    "predict = features[[\"lat\", \"long\"]]\n",
-    "predict.head()"
+    "all_owners_parcelles_pd['long'] = all_owners_parcelles_pd['geometry'].apply(lambda poly: poly.centroid.x)\n",
+    "all_owners_parcelles_pd['lat'] = all_owners_parcelles_pd['geometry'].apply(lambda poly: poly.centroid.y)\n",
+    "predict = all_owners_parcelles_pd[['parc_num', 'long', 'lat']].copy()\n",
+    "predict.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO link model_price_knn"
    ]
   },
   {
@@ -1345,7 +1298,7 @@
     "# Predict prices\n",
     "from machine_learning import model_price_knn\n",
     "\n",
-    "prices, rmse, ks = model_price_knn(train, predict, np.arange(1, 50))\n",
+    "predicted_chfm2, rmse, ks = model_price_knn(train, predict, np.arange(1, 50))\n",
     "\n",
     "pd.DataFrame(rmse, ks).plot(legend=False);\n",
     "plt.xlabel(\"k\");\n",
@@ -1365,11 +1318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Construct pandas with position and price for all parcelles\n",
-    "prices_for_all_parcels = features.copy()\n",
-    "prices_for_all_parcels['price'] = prices\n",
-    "\n",
-    "prices_for_all_parcels.head()"
+    "all_owners_parcelles_pd['CHF/m2'] = predicted_chfm2\n",
+    "all_owners_parcelles_pd.head(2)"
    ]
   },
   {
@@ -1377,7 +1327,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_owners_parcelles_pd"
+   ]
   },
   {
    "cell_type": "code",
@@ -1386,8 +1338,9 @@
    "outputs": [],
    "source": [
     "# Save heatmap with prices for each parcelle\n",
-    "hm = tools.heatmap_prices_per_parcels(geo_parcels, prices_for_all_parcels)\n",
-    "hm.save('export/heatmap_prices_all_parcelles.html')"
+    "from heatmap import prices_per_parcels\n",
+    "m = prices_per_parcels(all_owners_parcelles_pd)\n",
+    "m.save('export/prices_all_parcelles_pd.html')"
    ]
   },
   {
@@ -1547,7 +1500,6 @@
     "# Remove '90 - Zones foraines' from quartiers\n",
     "import geopandas\n",
     "quartiers = json.load(open('data/raw/maps/quartiers.geojson'))\n",
-    "quartiers_pd = geopandas.read_file('data/raw/maps/quartiers.geojson')\n",
     "quartiers_to_drop = (quartiers_pd['Name'] == '17 - Beaulieu / Grey / Boisy') | \\\n",
     "                    (quartiers_pd['Name'] == '90 - Zones foraines')\n",
     "quartiers_dropped_pd = quartiers_pd[~quartiers_to_drop]\n",
