Finish linear regression plots and add comments.

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -40,7 +40,14 @@
     "%matplotlib inline\n",
     "\n",
     "import seaborn as sns\n",
-    "sns.set()\n",
+    "sns.set(font=\"Helvetica Neue\")\n",
+    "themecolors = sns.color_palette([\"#5B698C\",\"#84CFAC\", \"#BD8273\",\"#0E285C\",  \"#B2A7DB\"])\n",
+    "sns.set_palette(themecolors)\n",
+    "\n",
+    "sns.set_style(\"whitegrid\", {\n",
+    "    \"axes.edgecolor\": \"0.9\",\n",
+    "    \"grid.color\": \"0.9\"\n",
+    "})\n",
     "\n",
     "# Auto reload module\n",
     "%load_ext autoreload\n",
@@ -1151,7 +1158,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lmplot(x=\"surface\", y=\"CHF/m2\", data=rents_per_quartier);"
+    "plot_df = rents_per_quartier[[\"distance\", \"surface\", \"CHF/m2\"]].copy()\n",
+    "plot_df.columns = [\n",
+    "    \"distance from the port Ouchy\", \n",
+    "    \"surface of the flat\", \n",
+    "    \"rent price in CHF/m^2\"\n",
+    "]\n",
+    "\n",
+    "pair = sns.pairplot(\n",
+    "    plot_df, \n",
+    "    x_vars=[\"distance from the port Ouchy\", \"surface of the flat\"], \n",
+    "    y_vars=[\"rent price in CHF/m^2\"],\n",
+    "    height=6,\n",
+    "    aspect=1,\n",
+    "    kind=\"reg\"\n",
+    ");\n",
+    "pair.fig.suptitle(\"Rent price relationships\");\n",
+    "plt.savefig(\"export/distance.svg\", format=\"svg\")"
    ]
   },
   {
