Add more comments for linear regression part.

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1065,7 +1065,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Linear regression on distance"
+    "### Linear regression on distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will try to find another relationship that influences the rent price. Let's first try the distance to the port [_Ouchy_](https://map.geo.admin.ch/?lang=en&topic=ech&bgLayer=ch.swisstopo.pixelkarte-farbe&layers=ch.swisstopo.zeitreihen,ch.bfs.gebaeude_wohnungs_register,ch.bav.haltestellen-oev,ch.swisstopo.swisstlm3d-wanderwege&layers_visibility=false,false,false,false&layers_timestamp=18641231,,,&E=2537733&N=1150883&zoom=7.498594761554026&crosshair=marker).\n",
+    "\n",
+    "In order to calculate distances with WGS-84 coordinates we use `geopy.great_circle`."
    ]
   },
   {
@@ -1078,13 +1087,19 @@
     "\n",
     "position = 46.50766, 6.62758\n",
     "\n",
-    "rent_positions = rent_prices_pd[['CHF/m2','lat','long']]\n",
+    "rent_distances = rent_prices_pd[[\n",
+    "    'CHF/m2', \n",
+    "    'lat',\n",
+    "    'long', \n",
+    "    'surface',\n",
+    "    'quartier'\n",
+    "]].copy().dropna()\n",
     "\n",
-    "rent_distances = rent_positions.apply(\n",
+    "distances = rent_distances.apply(\n",
     "    lambda row: great_circle((row.lat, row.long), position).km, axis=1\n",
     ")\n",
-    "rent_distances = rent_distances.to_frame(\"km\")\n",
-    "rent_distances[\"CHF/m2\"] = rent_positions[\"CHF/m2\"]\n",
+    "\n",
+    "rent_distances[\"distance\"] = distances\n",
     "rent_distances.head()"
    ]
   },
@@ -1094,8 +1109,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lmplot(x=\"km\", y=\"CHF/m2\", data=rent_distances);\n",
+    "sns.lmplot(x=\"distance\", y=\"CHF/m2\", data=rent_distances);\n",
     "plt.title(\"Distance from the station vs. rent prices\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks like something, but we need to check the significance of the model."
    ]
   },
   {
@@ -1105,7 +1127,7 @@
    "outputs": [],
    "source": [
     "distance_model = scipy.stats.linregress(\n",
-    "    rent_distances.km, rent_distances[\"CHF/m2\"]\n",
+    "    rent_distances.distance, rent_distances[\"CHF/m2\"]\n",
     ")\n",
     "\n",
     "def print_model(model):\n",
@@ -1117,16 +1139,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The p-value for the model is small enough to reject the null hypothesis of no relationship."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "lat_model = scipy.stats.linregress(\n",
-    "    rent_positions.lat ** 2, rent_positions[\"CHF/m2\"]\n",
+    "    rent_distances.lat ** 2, rent_distances[\"CHF/m2\"]\n",
     ")\n",
     "long_model = scipy.stats.linregress(\n",
-    "    rent_positions.long ** 2, rent_positions[\"CHF/m2\"]\n",
+    "    rent_distances.long ** 2, rent_distances[\"CHF/m2\"]\n",
     ")\n",
     "\n",
     "print_model(lat_model)\n",
@@ -1135,21 +1164,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rents_per_quartier = rent_prices_pd[['CHF/m2','lat','long', 'surface', 'quartier', 'owner']].copy()\n",
+    "This second analysis shows that it is really the distance to the lake. The latitude model (the higher the latitude the further away from the lake) yields a significant answer of a negative slope.\n",
     "\n",
-    "rents_per_quartier[\"distance\"] = rent_distances.km\n",
-    "rents_per_quartier = rents_per_quartier.dropna() # not anmore necessary, right?\n",
+    "The same is not true for the longitudal model.\n",
     "\n",
-    "print_model(\n",
-    "    scipy.stats.linregress(\n",
-    "        rents_per_quartier.surface, rents_per_quartier[\"CHF/m2\"]\n",
-    "    )\n",
-    ")\n"
+    "We will check a second influence, namely the surface of a flat on its price per square meter."
    ]
   },
   {
@@ -1158,16 +1180,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_df = rents_per_quartier[[\"distance\", \"surface\", \"CHF/m2\"]].copy()\n",
+    "print_model(\n",
+    "    scipy.stats.linregress(\n",
+    "        rent_distances.surface, rent_distances[\"CHF/m2\"]\n",
+    "    )\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is maybe unexpected but the p-value is the lowest that we encoutered in the entire analysis. It seems like rent prices don't exactly grow linearly with the surface of a flat. The square meter gets cheaper for large flats, most probably because fix costs like installing a kitchen and having a parking lot stay the same for all sizes of flats.\n",
+    "\n",
+    "We finally plot the two factors (distance and surface) in a pair plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df = rent_distances[[\"distance\", \"surface\", \"CHF/m2\"]]\n",
     "plot_df.columns = [\n",
-    "    \"distance from the port Ouchy\", \n",
+    "    \"distance from the port Ouchy in km\", \n",
     "    \"surface of the flat\", \n",
     "    \"rent price in CHF/m^2\"\n",
     "]\n",
     "\n",
     "pair = sns.pairplot(\n",
     "    plot_df, \n",
-    "    x_vars=[\"distance from the port Ouchy\", \"surface of the flat\"], \n",
+    "    x_vars=[\"distance from the port Ouchy in km\", \"surface of the flat\"], \n",
     "    y_vars=[\"rent price in CHF/m^2\"],\n",
     "    height=6,\n",
     "    aspect=1,\n",
