All in one - denoising

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "## Imports\n",
     "\n",
-    "We start importing some core python libraries that will be used throughout the whole Jupyter Notebook:"
+    "We start importing some core python libraries that will be used throughout the whole Jupyter Notebook."
    ]
   },
   {
@@ -945,6 +945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO\n",
     "np.sum(rent_prices_pd['owner'].isna())"
    ]
   },
@@ -1000,15 +1001,6 @@
     "\n",
     "rent_prices_dropped_pd['owner_type'] = rent_prices_dropped_pd['owner'].apply(lambda r: categorize(r))\n",
     "rent_prices_dropped_pd.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO PIETRO. COMMENTS and check covariates."
    ]
   },
   {
@@ -1183,7 +1175,7 @@
     "    scipy.stats.linregress(\n",
     "        rent_distances.surface, rent_distances[\"CHF/m2\"]\n",
     "    )\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1317,7 +1309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to find out the average price for each quartier taking into account all prices of the parcelles predicted in the previous section.\n",
+    "We want to find out the median price for each quartier taking into account all prices of the parcelles predicted in the previous section.\n",
     "\n",
     "For a correct rendering, we want to print only the quartiers from where we scraped the date. We therefore remove the two quartiers not scraped."
    ]
@@ -1399,16 +1391,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Denoising owner type - TODO PIETRO\n",
+    "## Denoising owner type\n",
     "\n",
     "We want to revisit the colorful owner types map by trying to find spatial clusters with a certain ownership type.\n",
     "We will approach this problem as a denoising one, and we will attribute to each parcel an owner type which is given by the category the most represented in its local neighborhood.\n",
     "We therefore find the K nearest neighbors to a parcel (itself included), and assign as type the most represented type in the neighbors.\n",
     "\n",
-    "- Find a representative point for each parcel (maybe the center of mass of the parcel)\n",
-    "- For each parcel find its nearest neighbors\n",
-    "- compute the distribution of ownership for each neihborhood\n",
-    "- assign to the parcel the ownership in the neighborhood"
+    "1. Find a representative point for each parcel\n",
+    "2. For each parcel find its nearest neighbors\n",
+    "3. compute the distribution of ownership for each neihborhood\n",
+    "4. assign to the parcel the ownership in the neighborhood"
    ]
   },
   {
@@ -1473,7 +1465,18 @@
     "# this map is still too noisy and degrades spatial information\n",
     "# because it doesn't give enough importance to the size of the neighboring parcels\n",
     "# so don't include in the website, rather include the next one\n",
-    "by_owners_category(complete_owners_parcelles_pd._to_geo(), res)"
+    "m = by_owners_category(complete_owners_parcelles_pd._to_geo(), res)\n",
+    "m.save(\"export/by_owners_category_denoised.html\")\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO COMMENT"
    ]
   },
   {
@@ -1493,7 +1496,7 @@
     "\n",
     "polygons_df = complete_owners_parcelles_pd[['parc_num', 'owner', 'geometry', 'owner_type']]\n",
     "\n",
-    "#cache this for performance purposes\n",
+    "# cache this for performance purposes\n",
     "polygons_df['x'] = polygons_df['geometry'].centroid.x\n",
     "polygons_df['y'] = polygons_df['geometry'].centroid.y\n",
     "# prepare the serie to store the results\n",
@@ -1509,7 +1512,19 @@
     "    neighbor_parcels = pd.concat((polygons_df, neigh), axis='columns', join='inner')\n",
     "    neighbor_parcels['intersection'] = neighbor_parcels.apply(polygons_intersection(circle), axis='columns')\n",
     "    intersection_per_cat = neighbor_parcels.groupby('owner_type')['intersection'].sum()\n",
-    "    types.loc[parc_no] = intersection_per_cat.sort_values().index[-1]"
+    "    types.loc[parc_no] = intersection_per_cat.sort_values().index[-1]\n",
+    "    \n",
+    "m = by_owners_category(complete_owners_parcelles_pd, types.to_frame())  \n",
+    "m.save(\"export/by_owners_category_entropy.html\")\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All In One maps\n",
+    "We want to put all three maps that show the distribution of owners by category in a single map."
    ]
   },
   {
@@ -1518,7 +1533,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "by_owners_category(complete_owners_parcelles_pd, types.to_frame())"
+    "from heatmap import by_owners_all_in_one\n",
+    "m3 = by_owners_all_in_one(complete_owners_parcelles_pd._to_geo(), parcels_categories, res, tiles=False)\n",
+    "m3.save(\"export/by_owners_all_in_one.html\")"
    ]
   },
   {
