All in one - by rents

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1528,14 +1528,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### By owners type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from heatmap import by_owners_all_in_one\n",
-    "m3 = by_owners_all_in_one(complete_owners_parcelles_pd._to_geo(), parcels_categories, res, tiles=False)\n",
+    "m3 = by_owners_all_in_one(complete_owners_parcelles_pd._to_geo(), parcels_categories, types.to_frame(), tiles=False)\n",
     "m3.save(\"export/by_owners_all_in_one.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### By rents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heatmap import by_rents_all_in_one\n",
+    "m3 = by_rents_all_in_one(rent_prices_pd, scraped_quartiers_pd, all_owners_parcelles_pd.dropna())\n",
+    "m3.save(\"export/by_rents_all_in_one.html\")"
    ]
   },
   {
