Starting last jupyter check. Waiting for Pietro entropy part.

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1376,15 +1376,21 @@
    "source": [
     "from heatmap import parcelles_prices_by_quartiers\n",
     "m = parcelles_prices_by_quartiers(scraped_quartiers_pd)\n",
-    "m.save('export/parcelles_prices_by_quartiers.html')\n",
-    "m"
+    "m.save('export/parcelles_prices_by_quartiers.html')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the plot heatmap above, we can notice that quartiers close to the lake are more expensive."
+    "The resulting map is accessible [here](export/parcelles_prices_by_quartiers.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the resulting map, we can notice that quartiers close to the lake generally are more expensive. This is in consistent with the conclusion we found in the 'linear regression by distance' part. "
    ]
   },
   {
@@ -1462,12 +1468,11 @@
     "res['category'] = nn5.predict(positions)\n",
     "res = res[['parc_num', 'category']].drop_duplicates().set_index('parc_num')\n",
     "\n",
+    "\n",
+    "\n",
     "# this map is still too noisy and degrades spatial information\n",
     "# because it doesn't give enough importance to the size of the neighboring parcels\n",
-    "# so don't include in the website, rather include the next one\n",
-    "m = by_owners_category(complete_owners_parcelles_pd._to_geo(), res)\n",
-    "m.save(\"export/by_owners_category_denoised.html\")\n",
-    "m"
+    "m = by_owners_category(complete_owners_parcelles_pd._to_geo(), res)"
    ]
   },
   {
@@ -1476,7 +1481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO COMMENT"
+    "# TODO PIETRO COMMENT."
    ]
   },
   {
@@ -1515,8 +1520,14 @@
     "    types.loc[parc_no] = intersection_per_cat.sort_values().index[-1]\n",
     "    \n",
     "m = by_owners_category(complete_owners_parcelles_pd, types.to_frame())  \n",
-    "m.save(\"export/by_owners_category_entropy.html\")\n",
-    "m"
+    "m.save(\"export/by_owners_category_denoised.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting map is accessible [here](export/by_owners_category_denoised.html)"
    ]
   },
   {
@@ -1541,8 +1552,15 @@
    "outputs": [],
    "source": [
     "from heatmap import by_owners_all_in_one\n",
-    "m3 = by_owners_all_in_one(complete_owners_parcelles_pd._to_geo(), parcels_categories, types.to_frame(), tiles=False)\n",
+    "m3 = by_owners_all_in_one(complete_owners_parcelles_pd._to_geo(), parcels_categories, types.to_frame())\n",
     "m3.save(\"export/by_owners_all_in_one.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting map is accessible [here](export/by_owners_all_in_one.html)"
    ]
   },
   {
@@ -1561,6 +1579,13 @@
     "from heatmap import by_rents_all_in_one\n",
     "m3 = by_rents_all_in_one(rent_prices_pd, scraped_quartiers_pd, all_owners_parcelles_pd.dropna())\n",
     "m3.save(\"export/by_rents_all_in_one.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting map is accessible [here](export/by_rents_all_in_one.html)"
    ]
   },
   {
