remove bad denoising and add comments

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1401,12 +1401,8 @@
     "\n",
     "We want to revisit the colorful owner types map by trying to find spatial clusters with a certain ownership type.\n",
     "We will approach this problem as a denoising one, and we will attribute to each parcel an owner type which is given by the category the most represented in its local neighborhood.\n",
-    "We therefore find the K nearest neighbors to a parcel (itself included), and assign as type the most represented type in the neighbors.\n",
     "\n",
-    "1. Find a representative point for each parcel\n",
-    "2. For each parcel find its nearest neighbors\n",
-    "3. compute the distribution of ownership for each neihborhood\n",
-    "4. assign to the parcel the ownership in the neighborhood"
+    "For each parcel, we therefore find all the parcels within a distance R (the _radius_). We will calculate the prevalent owner type within that radius and reassign it as the parcel owner type."
    ]
   },
   {
@@ -1422,66 +1418,18 @@
     "\n",
     "# lausanne is approximately at pi/4 degrees north (46° something)\n",
     "meters_per_easting_degree = 2*(EARTH_RADIUS_METERS*np.sin(np.pi/4))*np.pi/360\n",
-    "meters_per_northing_degree = 2*EARTH_RADIUS_METERS*np.pi/360"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "complete_owners_parcelles_pd.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "meters_per_northing_degree = 2*EARTH_RADIUS_METERS*np.pi/360\n",
+    "\n",
     "def compute_distance(delta_east, delta_north):\n",
-    "    \"\"\"squared distance in meters\"\"\"\n",
+    "    \"\"\"distance in meter given difference in coordinates\"\"\"\n",
     "    return np.sqrt((delta_east*meters_per_easting_degree)**2 +\\\n",
-    "        (delta_north*meters_per_northing_degree)**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# prepare the data\n",
-    "positions = np.vstack(\n",
-    "    (complete_owners_parcelles_pd.geometry.centroid.x.values,\n",
-    "     complete_owners_parcelles_pd.geometry.centroid.y.values\n",
-    "    )).T * [meters_per_easting_degree, meters_per_northing_degree]\n",
-    "classes = complete_owners_parcelles_pd['owner_type']\n",
+    "        (delta_north*meters_per_northing_degree)**2)\n",
     "\n",
-    "# fit the model\n",
-    "nn5 = sklearn.neighbors.KNeighborsClassifier(n_neighbors=5)\n",
-    "nn5.fit(positions, classes)\n",
-    "\n",
-    "# clean owner_types\n",
-    "res = complete_owners_parcelles_pd[['parc_num', 'geometry']].copy()\n",
-    "res['category'] = nn5.predict(positions)\n",
-    "res = res[['parc_num', 'category']].drop_duplicates().set_index('parc_num')\n",
-    "\n",
-    "\n",
-    "\n",
-    "# this map is still too noisy and degrades spatial information\n",
-    "# because it doesn't give enough importance to the size of the neighboring parcels\n",
-    "m = by_owners_category(complete_owners_parcelles_pd._to_geo(), res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO PIETRO COMMENT."
+    "def polygons_intersection(poly):\n",
+    "    \"\"\"returns a function that gives the intersection areas of a serie of polygons with `poly`\"\"\"\n",
+    "    def inters(serie):\n",
+    "            return serie['geometry'].intersection(poly).area\n",
+    "    return inters"
    ]
   },
   {
@@ -1491,11 +1439,6 @@
    "outputs": [],
    "source": [
     "# this cells takes a couple of minutes to run\n",
-    "\n",
-    "def polygons_intersection(poly):\n",
-    "    def inters(serie):\n",
-    "            return serie['geometry'].intersection(poly).area\n",
-    "    return inters\n",
     "\n",
     "RADIUS = 100\n",
     "\n",
@@ -1507,10 +1450,12 @@
     "# prepare the serie to store the results\n",
     "types = polygons_df[['parc_num', 'owner_type']].copy().set_index('parc_num').sort_index()['owner_type']\n",
     "\n",
+    "# iterate over every parcel\n",
     "for (idx, (parc_no, proprio, poly, owner_type, x, y)) in polygons_df.iterrows():\n",
     "    distances = compute_distance(polygons_df['x'] - x, polygons_df['y'] - y)\n",
     "    # select the cells whose center is closer than RADIUS to the current one\n",
     "    neigh = distances[distances < RADIUS]\n",
+    "    \n",
     "    # now weight each neighbour contribution by the size of their intersecting area with\n",
     "    # the circle of radius RADIUS\n",
     "    circle = poly.centroid.buffer(RADIUS/meters_per_easting_degree)\n",
@@ -1552,8 +1497,19 @@
    "outputs": [],
    "source": [
     "from heatmap import by_owners_all_in_one\n",
-    "m3 = by_owners_all_in_one(complete_owners_parcelles_pd._to_geo(), parcels_categories, types.to_frame())\n",
+    "m3 = by_owners_all_in_one(\n",
+    "    complete_owners_parcelles_pd._to_geo(),\n",
+    "    parcels_categories, types.to_frame(), tiles=True)\n",
     "m3.save(\"export/by_owners_all_in_one.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m3"
    ]
   },
   {
