add entropy map

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1582,6 +1582,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3.6 Entropy map\n",
+    "\n",
+    "To study local monopolies of ownership of the land, we produce an entropy map that will seek to detect areas where the owners in a local neighborhood of parcls are few.\n",
+    "To do this we select the nearest neighbors of each parcels, and calculate the Shannon entropy of the distribution of owners in this neighborhood."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this cells takes a couple of minutes to run\n",
+    "\n",
+    "def polygons_intersection(poly):\n",
+    "    def inters(serie):\n",
+    "            return serie['geometry'].intersection(poly).area\n",
+    "    return inters\n",
+    "\n",
+    "K = 10\n",
+    "RADIUS = 100\n",
+    "\n",
+    "polygons_df = complete_owners_parcelles_pd[['parc_num', 'owner', 'geometry', 'owner_type']]\n",
+    "\n",
+    "# cache this for performance purposes\n",
+    "polygons_df['x'] = polygons_df['geometry'].centroid.x\n",
+    "polygons_df['y'] = polygons_df['geometry'].centroid.y\n",
+    "# prepare the serie to store the results\n",
+    "entropy = polygons_df[['parc_num', 'owner']].copy().set_index('parc_num').sort_index()['owner']\n",
+    "\n",
+    "for (idx, (parc_no, proprio, poly, owner_type, x, y)) in polygons_df.iterrows():\n",
+    "    distances = compute_distance(polygons_df['x'] - x, polygons_df['y'] - y)\n",
+    "    # select the cells whose center is closer than RADIUS to the current one\n",
+    "    neigh = distances.sort_values(ascending=True)[:K]\n",
+    "    # now weight each neighbour contribution by the size of their intersecting area with\n",
+    "    # the circle of radius RADIUS\n",
+    "#     circle = poly.centroid.buffer(RADIUS/meters_per_easting_degree)\n",
+    "    neighbor_parcels = pd.concat((polygons_df, neigh), axis='columns', join='inner')\n",
+    "#     neighbor_parcels['intersection'] = neighbor_parcels.apply(polygons_intersection(circle), axis='columns')\n",
+    "    intersection_per_owner = neighbor_parcels.groupby('owner').size()\n",
+    "    p = intersection_per_owner / intersection_per_owner.sum()\n",
+    "    entropy.loc[parc_no] = scipy.stats.entropy(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import cm\n",
+    "from matplotlib import colors\n",
+    "from heatmap import getMap\n",
+    "\n",
+    "m_entropy = getMap()\n",
+    "#TODO weight by area\n",
+    "min_s, max_s = 1, np.quantile(entropy.values, q = .95)\n",
+    "\n",
+    "def style_function(feature):\n",
+    "    OPACITY = 0.4\n",
+    "    def entropy_color(entropy):\n",
+    "        rgb = cm.RdGy( (entropy - min_s) / (max_s - min_s))\n",
+    "        return colors.rgb2hex(rgb)\n",
+    "\n",
+    "    parc_num = feature['properties']['parc_num']\n",
+    "    s = entropy[parc_num]    \n",
+    "    return {\n",
+    "        'stroke':False,\n",
+    "        'fillColor': entropy_color(s),\n",
+    "        'fillOpacity':OPACITY\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "folium.GeoJson(\n",
+    "    complete_owners_parcelles_pd._to_geo(), \n",
+    "    style_function=style_function,\n",
+    ").add_to(m_entropy)\n",
+    "m_entropy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4. Data for website\n",
     "\n",
     "Yet that we have all data, we can prepare ad-hoc maps to be posted on our final website.\n",
@@ -1627,6 +1711,16 @@
    "metadata": {},
    "source": [
     "The resulting map is accessible [here](export/by_rents_all_in_one.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_entropy\n",
+    "m.save(\"export/entropy_owners.html\")"
    ]
   },
   {
