--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1122,12 +1122,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO PIETRO: COMMENT."
+    "# TODO COMMENT PIETRO. \n",
+    "\n",
+    "From the results of the linear regression, we can see that ..."
    ]
   },
   {
@@ -1632,34 +1632,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import cm\n",
-    "from matplotlib import colors\n",
-    "from heatmap import getMap\n",
-    "\n",
-    "m_entropy = getMap()\n",
-    "#TODO weight by area\n",
-    "min_s, max_s = 1, np.quantile(entropy.values, q = .95)\n",
-    "\n",
-    "def style_function(feature):\n",
-    "    OPACITY = 0.4\n",
-    "    def entropy_color(entropy):\n",
-    "        rgb = cm.RdGy( (entropy - min_s) / (max_s - min_s))\n",
-    "        return colors.rgb2hex(rgb)\n",
-    "\n",
-    "    parc_num = feature['properties']['parc_num']\n",
-    "    s = entropy[parc_num]    \n",
-    "    return {\n",
-    "        'stroke':False,\n",
-    "        'fillColor': entropy_color(s),\n",
-    "        'fillOpacity':OPACITY\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "folium.GeoJson(\n",
-    "    complete_owners_parcelles_pd._to_geo(), \n",
-    "    style_function=style_function,\n",
-    ").add_to(m_entropy)\n",
-    "m_entropy"
+    "from heatmap import entropy_owners\n",
+    "m = entropy_owners(complete_owners_parcelles_pd._to_geo(), entropy)\n",
+    "m.save(\"export/entropy_owners.html\")\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting map is accessible [here](export/entropy_owners.html)"
    ]
   },
   {
@@ -1711,16 +1694,6 @@
    "metadata": {},
    "source": [
     "The resulting map is accessible [here](export/by_rents_all_in_one.html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m_entropy\n",
-    "m.save(\"export/entropy_owners.html\")"
    ]
   },
   {
