comment linear regression on owner type

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1023,6 +1023,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rent_prices_pd.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rent_prices_pd['owner'] = rent_prices_pd['position'].apply(lambda pos: get_owner(pos))\n",
     "rent_prices_pd.head(2)"
    ]
@@ -1066,7 +1075,7 @@
    "outputs": [],
    "source": [
     "# Remove not assigned owner\n",
-    "rent_prices_with_owners_pd = rent_prices_pd.dropna().copy()\n",
+    "rent_prices_with_owners_pd = rent_prices_pd[~rent_prices_pd['owner'].isna()].copy()\n",
     "\n",
     "rent_prices_with_owners_pd['owner_type'] = rent_prices_with_owners_pd['owner'].apply(lambda r: categorize(r))\n",
     "rent_prices_with_owners_pd.head(2)"
@@ -1108,11 +1117,13 @@
     "    coeffs[i, 0] = lm.intercept_\n",
     "    coeffs[i, 1:] = lm.coef_\n",
     "\n",
-    "lower, upper = np.percentile(coeffs, q=(2.5, 97.5), axis=0)\n",
+    "alpha = 0.05\n",
+    "lower, upper = np.percentile(coeffs, q=((alpha/2)*100, (1 - alpha/2)*100), axis=0)\n",
     "\n",
-    "print(\"%-40s\\t%s\\t%s\\t%s\" % (\"feature\", \".025 qtile\", \".975 qtile\", \"n\"))\n",
+    "print(\"%-40s\\t%s\\t%s\\t%s\" % (\"feature\", \"%.3f qtile\" % (alpha/2), \"%.3f qtile\" % (1 - alpha/2), \"n\"))\n",
     "print()\n",
-    "print(\"%-40s:\\t%f\\t%f\" % (\"intercept\", lower[0], upper[0]))\n",
+    "print(\"%-40s:\\t%f\\t%f\\t%d\" % (\"intercept (average for private owner)\",\n",
+    "                              lower[0], upper[0],samples_per_cat['private']))\n",
     "\n",
     "for typ, lower_q, upper_q in zip(covariates.columns[1:], lower[1:], upper[1:]):\n",
     "    print(\n",
@@ -1125,9 +1136,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO COMMENT PIETRO. \n",
-    "\n",
-    "From the results of the linear regression, we can see that ..."
+    "The table shows the confidence interval for each parameter of the linear model.\n",
+    "The `intercept` value represents the average price of the 'private' owner category, and the `owner_type_*` rows show the confidence intervals for the weights corresponding to the presence of any of the categorical variables relating to the owner type.\n",
+    "Every the confidence intervals for the weights corresponding to every categories contain the value $0$. This leads us to be unable to statistically say that the type of owner influences the price of the apartment"
    ]
   },
   {
